Add second paragraph
Add paragraph about computer [12]

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <body>
     <h1>Amanda Kwong</h1>
-    <p>Hello! This is my page!</p>
+    <p>Hello! This is my CPRG 218 review!</p>
+    <p>I love my computer <3</p>
 </body>
 
 </html>
