Add ids and classes
Add ids and classes to the HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <body>
     <h1>Amanda Kwong</h1>
     <p>Hello! This is my CPRG 218 review!</p>
-    <p>I love my computer <3</p>
+    <p id="computer">I love my computer <3</p> <!---ids can only be used in one place-->
+    
+    <ul>
+        <li class="school">Submit assignments</li>
+        <li class="school">Review async learning</li>
+        <li>Clean bedroom</li>
+        <li>Make dinner</li>
+    </ul>
 </body>
 
 </html>
